Desktop submenu nowrap fix

--- a/_dev/css/theme/components/menu/_mainmenu.scss
+++ b/_dev/css/theme/components/menu/_mainmenu.scss
@@ -27,6 +27,7 @@
       margin: 0 0 map-get($spacers, 2);
 
       &--1 {
+        flex-wrap: wrap;
         display: flex;
       }
     }
